--- a/index.qmd
+++ b/index.qmd
@@ -17,7 +17,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!mjones-interview.qmd"
+    - "!pholborn-interview.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -57,6 +57,7 @@ listing:
     - /careers
     - "!index.qmd"
     - "!mjones-interview.qmd"
+    - "!pholborn-interview.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -132,15 +133,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/careers/posts/2024/03/21/mjones-interview.qmd">
+<a href="/careers/posts/2024/03/27/pholborn-interview.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## Data science and AI in financial services: An interview with Nationwide's Matthew Jones
-Matthew Jones, head of decision science and analytical innovation at building society Nationwide, talks career path, data science tools and skills, and the role of AI in financial services. Interview by Jonathan Gillard, professor of statistics and data science, Cardiff University.   
+## Data science and AI in the public sector: An interview with ONS’s Penny Holborn
+Penny Holborn, head of faculty for the Office for National Statistics Data Science Campus, talks to Jonathan Gillard about keeping up with new developments, the value of cross-team working, and always being driven to ask questions of data.   
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](careers/posts/2024/03/21/images/mjones-laptop.png)
+![](careers/posts/2024/03/27/images/pholborn-laptop.png)
 :::
 :::
 
