--- a/index.qmd
+++ b/index.qmd
@@ -17,7 +17,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!mjones-interview.qmd"
+    - "!ai-series-1.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -43,7 +43,7 @@ listing:
     - /ideas
     - "!index.qmd"
     - "!dsb-live.qmd"
-    - "!what-is-data-science.qmd"
+    - "!ai-series-1.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -132,15 +132,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/careers/posts/2024/03/21/mjones-interview.qmd">
+<a href="/ideas/posts/2024/04/22/ai-series-1.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## Data science and AI in financial services: An interview with Nationwide's Matthew Jones
-Matthew Jones, head of decision science and analytical innovation at building society Nationwide, talks career path, data science tools and skills, and the role of AI in financial services. Interview by Jonathan Gillard, professor of statistics and data science, Cardiff University.   
+## What is AI? Shedding light on the method and madness in these algorithms
+AI has become a hot topic of debate but these discussions can circulate fears and fantasies more than a meaningful analysis of real world data. In this special issue we canvas the expertise of statisticians and data specialists to pin down the key issues, starting with what AI is, and what we do and don’t know about it.   
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](careers/posts/2024/03/21/images/mjones-laptop.png)
+![](ideas/posts/2024/04/22/images/neuralnetworks.jpg)
 :::
 :::
 
