--- a/case-studies/posts/2024/05/03/dpm.qmd
+++ b/case-studies/posts/2024/05/03/dpm.qmd
@@ -7,31 +7,15 @@ categories:
   - Forecasting
 author: Luke Shaw (BNSSG ICB), Rich Wood (BNSSG ICB, University of Bath), Christos Vasilakis (University of Bath), Zehra Onen Dumlu (University of Bath)
 date: last-modified
-date-format: long
 toc: true
 image: images/bnssg-logo.png
-image-alt: The NHS logo, with the words "Bristol, North Somerset, South Gloucestershire Integrated Care Board" underneath.
-format:
-  html:
-    toc: true
-    grid:
-      sidebar-width: 0px
-      body-width: 1000px
-      margin-width: 250px
-    code-annotations: below
-    embed-resources: true
-  docx: 
-    embed-resources: true
+image-alt: The NHS logo, with the words Bristol, North Somerset, South Gloucestershire Integrated Care Board.
 execute:
   eval: false
   echo: true
   messages: false
   error: false
   warning: false
-page-layout: article
-title-block-banner: true
-editor_options: 
-  chunk_output_type: console
 ---
 
 ## Background
