article and main index
changes so far

--- a/ideas/posts/2024/05/07/ai-series-3.qmd
+++ b/ideas/posts/2024/05/07/ai-series-3.qmd
@@ -74,9 +74,17 @@ Access to real-world healthcare data remains challenging, prompting the developm
 ::: grid
 ::: {.g-col-12 .g-col-md-12}
 About the authors
-: **Author name** bio goes here.
+: **Fatemeh Torabi** is Senior Research Officer and Data Scientist, at Swansea University and works on Health Data Science and Population Data Science for the Dementias Platform UK. 
 
-: **Author name** bio goes here
+: **Lewis Hotchkiss** is a Research Officer in Neuroimaging at Swansea University and works on Population Data Science for the Dementias Platform UK.
+
+: **Emma Squires** is the Data Project Manager for Dementias Platform UK based at Swansea University and works on Population Data Science
+
+: **Prof. Simon E. Thompson** is Deputy Associate Director of the Dementias Platform UK
+
+: **Prof. Ronan A. Lyons** is the Associate Director of the Dementias Platform UK based at Swansea University and works on Population Data Science. 
+
+
 :::
 
 ::: {.g-col-12 .g-col-md-6}
@@ -90,7 +98,7 @@ Copyright and licence
 :::
 ::: {.g-col-12 .g-col-md-6}
 How to cite
-:   Name, Author. 2024. "Headline." Real World Data Science, April 29, 2024. [URL](https://realworlddatascience.net/ideas/posts/2024/04/29/ai-series-3.html)
+:   Torabi, Fatemeh, Hotchkiss, Lewis, Squires, Emma, Thompson, Simon E. and Lyons, Ronan A. 2024. "Getting the data right for optimised AI performance." Real World Data Science, May 7, 2024. [URL](https://realworlddatascience.net/ideas/posts/2024/05/07/ai-series-3.html)
 :::
 :::
 :::
