--- a/index.qmd
+++ b/index.qmd
@@ -17,7 +17,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!mjones-interview.qmd"
+    - "!ai-series-3.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -43,7 +43,7 @@ listing:
     - /ideas
     - "!index.qmd"
     - "!dsb-live.qmd"
-    - "!what-is-data-science.qmd"
+    - "!ai-series-3.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -132,15 +132,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/careers/posts/2024/03/21/mjones-interview.qmd">
+<a href="/ideas/posts/2024/05/07/ai-series-3.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## Data science and AI in financial services: An interview with Nationwide's Matthew Jones
-Matthew Jones, head of decision science and analytical innovation at building society Nationwide, talks career path, data science tools and skills, and the role of AI in financial services. Interview by Jonathan Gillard, professor of statistics and data science, Cardiff University.   
+## AI series: Healthy datasets for optimised AI performance
+Even “correct” data can cause all manner of mischief when fed indiscriminately into AI training and test data sets. Here the various issues that can arise and possible routes to resolve them are laid out, taking several lessons from healthcare.   
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](careers/posts/2024/03/21/images/mjones-laptop.png)
+![](ideas/posts/2024/05/07/images/Stages-of-model-development-724.png)
 :::
 :::
 
