--- a/ideas/posts/2024/05/07/ai-series-3.qmd
+++ b/ideas/posts/2024/05/07/ai-series-3.qmd
@@ -61,6 +61,9 @@ When using sensitive health data of patients a further layer is in place to ensu
 
 Access to real-world healthcare data remains challenging, prompting the development of AI models on open-source or synthetic datasets. However, these models often exhibit performance discrepancies when applied to real world data ^[Alkhalifah, T., Wang, H. & Ovcharenko, O. MLReal: Bridging the gap between training on synthetic data and real data applications in machine learning. Artif. Intell. Geosci. 3, 101–114 (2022).] It is therefore imperative to provide researchers with secure access to real-world healthcare data within TREs, bolstered by robust governance and support mechanisms. Initiatives like the GRAIMATTER study ^[Jefferson, E. et al. GRAIMATTER Green Paper: Recommendations for disclosure control of trained Machine Learning (ML) models from Trusted Research Environments (TREs). doi:10.5281/ZENODO.7089491.] and AI risk evaluation workshops ^[DARE UK Community Working Group - DARE UK. https://dareuk.org.uk/dare-uk-community-working-groups/dare-uk-community-working-group-ai-risk-evaluation-working-group/.] exemplify efforts to facilitate AI model development and translation from TREs to clinical settings. By establishing governance guidelines and promoting FAIR datasets, TREs aim to become important resources for the AI research community. Providing standardised and curated data rich repositories that AI models can be developed on is a top priority in UK-TREs. Given the well-defined and secure governance environments of TREs they may also provide the basis for federated data analysis allowing researchers to combine datasets across TREs/data environments. In this way they can provide the large numbers that data hungry algorithms require, while avoiding the wide-ranging and myriad ways that data for a specific dataset can be “wrong”.
 
+## Also in the AI series:
+[What is AI? Shedding light on the method and madness in these algorithms](https://realworlddatascience.net/ideas/posts/2024/04/22/ai-series-1.html)
+[Generative AI models and the quest for human-level artificial intelligence](https://realworlddatascience.net/ideas/posts/2024/04/29/gen-ai-human-intel.html) 
 
 
 
