--- a/ideas/posts/2024/04/29/gen-ai-human-intel.qmd
+++ b/ideas/posts/2024/04/29/gen-ai-human-intel.qmd
@@ -1,5 +1,5 @@
 ---
-title: Generative AI models and the quest for human-level artificial intelligence
+title: AI Series - Generative AI models and the quest for human-level artificial intelligence
 description: |
   Diego Miranda-Saavedra explores some of the merits and limitations of modern machine learning models, and considers where these 'intelligent' systems might sit in the constellation of human capabilities. 
 categories:
@@ -81,6 +81,10 @@ LLMs do not yet approximate the human brain; generative video models do not appr
 *Reasonable* questions can be posed by many and answered logically (some even by machines) using the standard scientific process of experimental design, controls and hypothesis validation. In this context, the faster and more efficient exploration of search space by learning methods, complemented by the delegation of repetitive tasks to machines, will [allow scientists to conduct experiments at greater scale](https://www.technologyreview.com/2023/07/05/1075865/eric-schmidt-ai-will-transform-science/) while focusing on designing optimal solutions. Beyond reasonable questions and expected results is the concept of *serendipity* that machines cannot yet be made to grasp. Some of the greatest discoveries in the history of science are indeed serendipitous (accidental), including the discovery of insulin, penicillin, smallpox vaccination, the anti-malarial drug quinine, X-rays, nylon and the anaesthetic effects of ether and nitrous oxide.^[Roberts RM. *Serendipity: Accidental Discoveries in Science (1st Edition)*. Wiley-VCH, Weinheim, Germany, 1989. ISBN: 0471602035.] Turning accidents into discoveries requires having a questioning mind that can view data from several perspectives and connect seemingly unrelated pieces of information instead of discarding unusual results right away.
 
 And yet beyond serendipitous discoveries we have *extraordinary* questions, which machines are as yet incapable of asking. Extraordinary questions lie outside of our current frame of knowledge and require an illogical step that is often the product of letting one’s mind wander freely.^[Yanai I, Lercher M. *What Is The Question?* Genome Biology 20(1):289, 2019.] A classical example here is when Einstein was trying to modify Maxwell’s equations so that they were no longer in contradiction with the constant speed of light that had been observed. After trying to modify these equations for years, Einstein eventually realised that it was not Maxwell’s fault. Rather, our notion of time was incorrect. Einstein thus stumbled upon the very question that led to the idea that the rate at which time passes depends on one’s frame of reference. While machines follow rules, the revolutionary ideas of Einstein, Newton, Darwin, Galileo, Wittgenstein and many others did not follow any rules established at the time. Therefore, the real danger in thinking that we can rely on “intelligent” machines to achieve a human level of imagination, intuition, wisdom or purpose anytime soon is that the world will become an even more statistically predictable place.
+
+## Also in the AI series:
+[What is AI? Shedding light on the method and madness in these algorithms](https://realworlddatascience.net/ideas/posts/2024/04/22/ai-series-1.html)
+[Healthy datasets for optimised AI performance](https://realworlddatascience.net/ideas/posts/2024/05/07/ai-series-3.html) 
 
 ::: article-btn
 [Explore more data science ideas](/ideas/index.qmd)
