list and prefix added (and link)
list and prefix added (and link)

--- a/ideas/posts/2024/04/22/ai-series-1.qmd
+++ b/ideas/posts/2024/04/22/ai-series-1.qmd
@@ -1,5 +1,5 @@
 ---
-title: "What is AI? Shedding light on the method and madness in these algorithms"
+title: "Article series: What is AI? Shedding light on the method and madness in these algorithms"
 description: |
   AI has become a hot topic of debate but these discussions can circulate fears and fantasies more than a meaningful analysis of real world data. In this special issue we canvas the expertise of statisticians and data specialists to pin down the key issues, starting with what AI is, and what we do and don’t know about it. 
 categories: 
@@ -38,7 +38,7 @@ As the number of layers increased from just a few, the term “deep learning” 
 “Transformers are also a neural network but they encode a different kind of structure,” Veličković tells Real World Data Science, as he describes the data architecture at the heart of the large language models creating such a buzz at present. Language has structure too – the letters make up words, which then make up sentences and so on. So it makes sense to program some of that structure into the algorithm rather than leaving it to work it all out. “You would need a lot more training data than there is on the internet to train a system without such structure by itself,” adds Veličković. Transformers structure the training data into tokens, and a key component first reported in 2017  is the way each token then connects with or [“attends” to all other similar tokens](https://papers.nips.cc/paper_files/paper/2017/hash/3f5ee243547dee91fbd053c1c4a845aa-Abstract.html) . Here whether they are “similar” is determined by their dot products, a multiplication technique for the kind of vector format of input numbers used for these tokens (Figure 2). Exploiting this “dot product attention” significantly improves the efficiency of the training process 
 ## Taking the world by storm
 The transformer architecture proved very powerful as has been seen in the surge to prominence of various AI systems based on generative pre-trained transformer algorithms, such as ChatGPT, BERT and PaLM, although this likely has at least as much to do with the marketing of the recent releases as it does with the algorithm itself. “It was a small evolution rather than a revolution,” says Bastiman in reference to recent GPT releases, explaining that there was an increase in parameter size and the amount of data used for training that gave rise to something that could provide broader answers and was ready for mass market. Nonetheless she adds, “There had been GPT2, GPT1 and all the other previous ones had been released quietly and had all been quite good.” 
-The marketing spin has not stopped with the product releases as terms like “hallucination” have entered the lexicon to describe instances when the output is wrong and potentially dangerous. (Figure 3) “The language we are using to describe these models is different to how we describe human intelligence to deliberately instil the sense this is better,” adds Bastiman. “So even if the model is incorrect these terms imply that it is still doing something amazing.”
+The marketing spin has not stopped with the product releases as terms like “[hallucination](https://realworlddatascience.net/viewpoints/editors-blog/posts/2022/11/23/LLM-content-warning.html)” have entered the lexicon to describe instances when the output is wrong and potentially dangerous. (Figure 3) “The language we are using to describe these models is different to how we describe human intelligence to deliberately instil the sense this is better,” adds Bastiman. “So even if the model is incorrect these terms imply that it is still doing something amazing.”
 
 
 ![“Hallucinated” references. A study found that out of the 178 references cited by ChatGPT, 69 did not have a DOI. Upon extensive internet search, 41 out of these 69 reference articles were found to exist.](images/hallucinatedreferences.jpg)
@@ -74,6 +74,10 @@ With many commercial algorithms the details of the training data are unknown or 
 The fact is many of us are already interacting with multiple machine learning/AI models on a daily basis through recommendations, search engines and predictive text. “If we are going to deploy these [machine learning algorithms] at scale in a way that will affect human lives, then we first need to understand the implications for humans of these models,” says Witten. “This includes both statistical and ethical considerations.”
 
 Coming up: Forthcoming articles in this special issue will look at machine learning and human-level intelligence, issues around data, techniques for evaluation, gauging workforce impact, governance, best practice and living with AI
+
+## Also in the AI series
+[Generative AI models and the quest for human-level artificial intelligence](https://realworlddatascience.net/ideas/posts/2024/04/29/gen-ai-human-intel.html) 
+[datasets for optimised AI performance](https://realworlddatascience.net/ideas/posts/2024/05/07/ai-series-3.html)
 
 
 
