post-dpm-blog-tweaks
typos, affiliations, date of article, blog thumbnail

--- a/case-studies/posts/2024/05/08/dpm.qmd
+++ b/case-studies/posts/2024/05/08/dpm.qmd
@@ -8,8 +8,8 @@ categories:
 author: Luke Shaw (BNSSG ICB), Rich Wood (BNSSG ICB, University of Bath), Christos Vasilakis (University of Bath), Zehra Onen Dumlu (University of Bath)
 date: last-modified
 toc: true
-image: images/bnssg-logo.png
-image-alt: The NHS logo, with the words Bristol, North Somerset, South Gloucestershire Integrated Care Board.
+image: images/doctor-patient-thumbnail.png
+image-alt: A doctor takes a blood pressure reading from a patient.
 execute:
   eval: false
   echo: true
@@ -77,7 +77,7 @@ We combine these population health segment projections – i.e., how many people
 
 ## Findings 
 
-The first output of the model is the population forecast for each Core Segment, as plotted in @fig-sankey. The visualisation is a type of Sankey Diagram called an alluvial plot, which shows the proportion of people moving between the Core Segments each year. As it is to be expected, the majority of individuals stay in the same Core Segment year-on-year as the process of acquiring conditions and developing multimorbidity takes places over many years and decades.
+The first output of the model is the population forecast for each Core Segment, as plotted in @fig-sankey. The visualisation is a type of sankey diagram called an alluvial plot, which shows the proportion of people moving between the Core Segments each year. As it is to be expected, the majority of individuals stay in the same Core Segment year-on-year as the process of acquiring conditions and developing multimorbidity takes places over many years and decades.
 
 The concerning insight shown in @fig-sankey is that all Core Segments apart from (the most healthy) <span style="color:#77A033;">**Core Segment 1**</span> are due to increase in size, with <span style="color:#FF6C53;">**Core Segment 5**</span> having the largest percentage increase over the next 20 years. While, at first glance, this could be attributed to the effect an ageing population, in which people are staying alive for longer we will see in the next set of results that this itself does not wholly explain the forecasted Core Segment changes.
 
@@ -137,9 +137,9 @@ While this is undoubtedly a difficult problem – both conceptually and statisti
 ::: {.g-col-12 .g-col-md-12}
 About the authors
 : **Luke Shaw** is a Data Scientist working in the NHS.
-: **Rich Wood** Richard Wood is Head of Modelling and Analytics at BNSSG CCG and a Visiting Research Fellow at University of Bath School of Management.
-: **Christos Vasilakis** is Director of Centre for Healthcare Innovation and Improvement (CHI2) at the University of Bath.
-: **Zehra Onen Dumlu** is a Research Associate at CHI2 and Lecturer ant the University of Bath.
+: **Rich Wood** is Head of Modelling Analytics at BNSSG ICB and Senior Visiting Research Follow at University of Bath School of Management.
+: **Christos Vasilakis** is Director of the Centre for Healthcare Innovation and Improvement (CHI2), and Professor at the University of Bath School of Management.
+: **Zehra Onen Dumlu** is a Research Associate at CHI2 and Lecturer at the University of Bath.
 :::
 
 ::: {.g-col-12 .g-col-md-6}
@@ -151,7 +151,7 @@ Copyright and licence
 
 ::: {.g-col-12 .g-col-md-6}
 How to cite
-: Shaw, Luke et al 2024. "Forecasting the Health Needs of a Changing Population" Real World Data Science, May 03, 2024. [URL](https://realworlddatascience.net/case-studies/posts/2024/05/03/dpm.html)
+: Shaw, Luke et al 2024. "Forecasting the Health Needs of a Changing Population" Real World Data Science, May 08, 2024. [URL](https://realworlddatascience.net/case-studies/posts/2024/05/08/dpm.html)
 :::
 :::
 :::
