--- a/index.qmd
+++ b/index.qmd
@@ -17,7 +17,7 @@ listing:
     - /careers
     - /viewpoints
     - "!index.qmd"
-    - "!mjones-interview.qmd"
+    - "!ai-series-2.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -43,7 +43,7 @@ listing:
     - /ideas
     - "!index.qmd"
     - "!dsb-live.qmd"
-    - "!what-is-data-science.qmd"
+    - "!ai-series-2.qmd"
     sort: "date desc"
     type: grid
     categories: false
@@ -132,15 +132,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/careers/posts/2024/03/21/mjones-interview.qmd">
+<a href="/ideas/posts/2024/05/14/ai-series-2.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## Data science and AI in financial services: An interview with Nationwide's Matthew Jones
-Matthew Jones, head of decision science and analytical innovation at building society Nationwide, talks career path, data science tools and skills, and the role of AI in financial services. Interview by Jonathan Gillard, professor of statistics and data science, Cardiff University.   
+## AI Series: On AI ethics - influencing its use in the delivery of public good 
+ While AI algorithms can pose a number of challenges in terms of the size and sophistication of the algorithms, ethical issues can be the hardest and most important aspect to get right. Olivia Varley-Winter looks at why ethical considerations need to come first when working with AI and what this means.    
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](careers/posts/2024/03/21/images/mjones-laptop.png)
+![](ideas/posts/2024/05/14/images/Eleanor_Roosevelt-991724.jpg)
 :::
 :::
 
