--- a/ideas/posts/2024/04/22/ai-series-1.qmd
+++ b/ideas/posts/2024/04/22/ai-series-1.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Article series: What is AI? Shedding light on the method and madness in these algorithms"
+title: "AI series: What is AI? Shedding light on the method and madness in these algorithms"
 description: |
   AI has become a hot topic of debate but these discussions can circulate fears and fantasies more than a meaningful analysis of real world data. In this special issue we canvas the expertise of statisticians and data specialists to pin down the key issues, starting with what AI is, and what we do and don’t know about it. 
 categories: 
