--- a/ideas/posts/2024/04/29/gen-ai-human-intel.qmd
+++ b/ideas/posts/2024/04/29/gen-ai-human-intel.qmd
@@ -1,5 +1,5 @@
 ---
-title: "AI Series: Generative AI models and the quest for human-level artificial intelligence"
+title: "AI series: Generative AI models and the quest for human-level artificial intelligence"
 description: |
   Diego Miranda-Saavedra explores some of the merits and limitations of modern machine learning models, and considers where these 'intelligent' systems might sit in the constellation of human capabilities. 
 categories:
