--- a/ideas/posts/2024/05/21/ai-series-4.qmd
+++ b/ideas/posts/2024/05/21/ai-series-4.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Evaluation essentials for safe and reliable AI model performance" 
+title: "AI series: Evaluation essentials for safe and reliable AI model performance" 
 description: |
   The real world can be a dangerous place for an AI algorithm, full of unforeseen data, evolving behaviours and significant human consequences. Isabel Sassoon highlights some of the hurdles to navigate when testing and assessing whether a model is fit for purpose.  
 categories: 
@@ -11,6 +11,9 @@ date: 05/21/2024
 image: images/Evaluation_thumbnail.jpg 
 image-alt: Reliable deployment of an algorithm requires identifying metrics, risks and rigorous, ongoing evaluation. Image created by Isabel Sassoon using firefly to show a technical report process flow of statistical model performance and a huge numbers chart.
 toc: true
+language: 
+    section-title-footnotes: References
+
 ---
 
 It took just sixteen hours for [Microsoft’s shiny new chatbot](https://blogs.microsoft.com/blog/2016/03/25/learning-tays-introduction/) Tay  to be shut down for profanity. The chatbot had been released on the social media platform, X, then known as Twitter, following extensive evaluation and stress testing under different conditions to ensure that interacting with the chatbot would be a positive experience. Unfortunately, the testing plan had not bargained on a coordinated attack exploiting the chatbot’s vulnerability when exposed to a torrent of offensive material. Tay soon began tweeting wildly inappropriate words and images and was taken offline within hours. 
@@ -28,9 +31,9 @@ Classification model performance can be measured using accuracy, confusion matri
 
 ![The ROC. The receiver operating characteristic can provide a helpful means of visualising performance. Credit: Shutterstock.](images/ROC_from_shutterstoc.jpg){#fig-1 fig-align="center" fig-alt="The ROC. The receiver operating characteristic can provide a helpful means of visualising performance. Credit: Shutterstock"}
 
-Additionally, the sensitivity and specificity can provide a more detailed look at model performance. The sensitivity refers to the proportion of cases labelled as positive that are classified as positive by the model, whereas specificity refers to the proportion labelled as negative that it classifies as negative. It is useful to visualise model performance and the receiver operating characteristic (ROC) provides a method to do just that. The ROC plots the True Positive rate against the False Positive rate for the model. This can further be summarised in one value as the area under the curve (AUC). The larger the AUC the better the model is performing. 
+Additionally, the sensitivity and specificity can provide a more detailed look at model performance. The sensitivity refers to the proportion of cases labelled as positive that are classified as positive by the model, whereas specificity refers to the proportion labelled as negative that it classifies as negative. It is useful to visualise model performance and the receiver operating characteristic (ROC) provides a method to do just that. The ROC plots the True Positive rate against the False Positive rate for the model. This can be further summarised in one value as the area under the curve (AUC). The larger the AUC the better the model is performing. 
 
-Deciding whether accuracy is enough or whether there is a need to delve into the directions of the errors depends on the context of the model’s deployment. Another example in medicine are the risk models that were developed to assess an individual’s risk of a specific medical condition, such as  [QRISK](https://qrisk.org/) ^[Hippisley-Cox, J., Coupland, C. and Brindle, P. Development and validation of QRISK3 risk prediction algorithms to estimate future risk of cardiovascular disease: prospective cohort study.*BMJ* (2017) [doi: https://doi.org/10.1136/bmj.j2099](https://www.bmj.com/content/357/bmj.j2099).] which calculates a person's risk of developing a heart attack or stroke over the next 10 years. Here model performance needs to go beyond accuracy and consider the direction of the errors it makes. A good overview of performance evaluation is outlined by Flach (2019) ^[Flach, P. (2019). Performance evaluation in machine learning: the good, the bad, the ugly, and the way forward. *Proceedings of the AAAI conference on artificial intelligence* pp. 9808-9814 (2019) [doi: https://doi.org/10.1609/aaai.v33i01.33019808](https://ojs.aaai.org/index.php/AAAI/article/view/5055).]. Is it better to tell someone they may be at risk of disease X, run a blood test and rule it out (False Positive) than to tell them they are not at risk and not check (False Negative)? All this needs to be considered and factored into the validation of the model. It is worth noting that a systematic direction for its errors can cause an algorithm to hit [ethical problems](https://realworlddatascience.net/ideas/posts/2024/05/14/ai-series-2.html).
+Deciding whether accuracy is enough or whether there is a need to delve into the directions of the errors depends on the context of the model’s deployment. Other examples in medicine include the risk models that were developed to assess an individual’s risk of a specific medical condition, such as  [QRISK](https://qrisk.org/) ^[Hippisley-Cox, J., Coupland, C. and Brindle, P. Development and validation of QRISK3 risk prediction algorithms to estimate future risk of cardiovascular disease: prospective cohort study.*BMJ* (2017) [doi: https://doi.org/10.1136/bmj.j2099](https://www.bmj.com/content/357/bmj.j2099).] which calculates a person's risk of developing a heart attack or stroke over the next 10 years. Here model performance needs to go beyond accuracy and consider the direction of the errors it makes. A good overview of performance evaluation is outlined by Flach (2019) ^[Flach, P. (2019). Performance evaluation in machine learning: the good, the bad, the ugly, and the way forward. *Proceedings of the AAAI conference on artificial intelligence* pp. 9808-9814 (2019) [doi: https://doi.org/10.1609/aaai.v33i01.33019808](https://ojs.aaai.org/index.php/AAAI/article/view/5055).]. Is it better to tell someone they may be at risk of disease X, run a blood test and rule it out (False Positive) than to tell them they are not at risk and not check (False Negative)? All this needs to be considered and factored into the validation of the model. It is worth noting that a systematic direction for its errors can also cause an algorithm to hit [ethical problems](https://realworlddatascience.net/ideas/posts/2024/05/14/ai-series-2.html).
 
 When evaluating the performance of models that are estimating a numerical value (e.g height of child from height of parents) the measures used are based on how far off the model’s estimate is from the actual value (which is known for testing data). There are then a multitude of ways of summarising that quantity. The mean square error (MSE) is computed by taking the average squared difference between the estimated values from the model and the actual value in the data. Other variations include root mean square error (RMSE) and mean absolute error (MAE). The RMSE is computed in the same way as the MSE but the value is square rooted. The MAE takes a different approach by summing up the absolute errors (i.e. the error magnitude). Each of these three measures involve dividing the value obtained by the number of rows in the data. Depending on the context one of these measures may be better suited than others. For example the MSE is sensitive to outliers so can be easily skewed by a small number of extreme values, which may be useful to highlight them, whereas the RMSE has the advantage of being measured in the same units as the original variable the model is designed to estimate.
 
@@ -43,11 +46,11 @@ These data sets also need to have reliable labelling i.e. the rows of data need 
 
 Several approaches for generating test data sets take training and test data as distinct subsets from the same initial data set ^[Witten, I. H., Frank, E. and Hall, M. A. Data mining: Practical machine learning tools and techniques. Morgan Kaufmann (2011).]. There are different ways of doing this to make the most of the data to evaluate the model as systematically and exhaustively as possible.  Perhaps the simplest example is using a hold-out set, which involves taking all the data available and taking a random subset of the data to use for testing the model. Depending on how much data is available then this can be 50% or less.  
 
-A slightly more sophisticated approach is k-fold cross validation, which involves splitting all the data you have available into k subsets and then doing k iterations where in each iteration a different kth of the data is used as the testing data for evaluation of the model built by training it on the remaining (k-1/k) of the data. This is repeated k times each time using a different one of the k subsets for testing. The performance of the model can then be averaged over the k iterations. (The measure of performance can be for example accuracy or sensitivity depending on the context). For example, if k is 3 then the data is split into 3, and each iteration will take a different 2/3 of the data as training data to build the model, and the remaining 1/3 as testing data to evaluate the model. 
+A slightly more sophisticated approach is k-fold cross validation, which involves splitting all the data you have available into k subsets and then doing k iterations where in each iteration a different kth of the data is used as the testing data for evaluation of the model built by training it on the remaining (k-1/k) of the data. This is repeated k times each time using a different one of the k subsets for testing. The performance of the model can then be averaged over the k iterations. (The measure of performance can be, say, accuracy or sensitivity depending on the context). For example, if k is 3 then the data is split into 3, and each iteration will take a different 2/3 of the data as training data to build the model, and the remaining 1/3 as testing data to evaluate the model. 
 
 ![K fold cross validation can indicate how sensitive a model is to the test data. Credit: Fabian Flöck CC-BY-AS-3.0](images/k-fold-cross-validation.png){#fig-1 fig-align="center" fig-alt="K fold cross validation can indicate how sensitive a model is to the test data. Credit: Fabian Flöck CC-BY-AS-3.0"}
 
-Bootstrap is a more computationally intensive approach and it involves creating multiple samples by randomly sampling with replacement from the original data. Typically, hundreds or thousands such samples are generated, each will be different.  These multiple samples provide multiple versions of the training and testing data so the model can be evaluated on all these variations. As bootstrap relies on sampling with replacement this means that each row of data in the original data can appear multiple times in a sample training or test data during each iteration, or not appear in other samples. As with k-fold cross validation the performance of the model can be then averaged over these multiple iterations. It is important that bootstrap does not rely on only a handful of iterations.  Both bootstrap and cross validation offer an opportunity to see how sensitive the model’s performance is to the characteristics of the test data, but when the data sets available are small, the use of the bootstrap approach provides a more robust way of estimating the model’s performance. 
+Bootstrap is a more computationally intensive approach and it involves creating multiple samples by randomly sampling with replacement from the original data. Typically, hundreds or thousands of and such samples are generated, each will be different.  These multiple samples provide multiple versions of the training and testing data so the model can be evaluated on all these variations. As bootstrap relies on sampling with replacement this means that each row of data in the original data can appear multiple times in a sample training or test data during each iteration, or not appear in other samples. As with k-fold cross validation the performance of the model can be then averaged over these multiple iterations. It is important that bootstrap does not rely on only a handful of iterations.  Both bootstrap and cross validation offer an opportunity to see how sensitive the model’s performance is to the characteristics of the test data, but when the data sets available are small, the use of the bootstrap approach provides a more robust way of estimating the model’s performance. 
 
 An approach that can be useful to test whether the performance of the model is sensitive to time is time-based splits. This involves taking a “sliding window” ensuring that data is split into back-to-back time periods. Using a back-to-back (sliding window) further ensures that the data the model is trained on is separate from the one it is tested on.
 
@@ -58,7 +61,7 @@ In the first case, if a model makes use of data that is fed into it from another
 
 Model drift is more complex as real-world data evolves over time. There are two types of model drift: data drift and concept drift. Data drift refers to the change that can occur to data over time, whilst concept drift^[Bayram, F., Ahmed, B. S. and Kassler A. From concept drift to model degradation: An overview on performance-aware drift detectors. *Knowledge-Based Systems* (2022) [doi: https://doi.org/10.1016/j.knosys.2022.108632](https://www.sciencedirect.com/science/article/pii/S0950705122002854).] is a deterioration or change in the relationship between the target variable and input variables of a model. An example of data drift could be in the context of billing data the addition of new price plans or phones to the data, whilst an example of concept drift can arise when there is a change in the relationship between the effect (for instance, leaving one mobile phone provider for another) and underlying factors changes. In the context of the mobile phone provider market, a concept drift may mean that leaving for another provider is no longer dictated so much by price sensitivity as the type of network. Both types of drift lead to a deterioration in performance of the model as time goes by. Performance monitoring of the model is key to detecting model drift but differentiating between data or concept drift requires additional specialist approaches. Some of these are outlined in (Rotalinti, 2022)^[Rotalinti, Y., Tucker, A., Lonergan, M.,  Myles, P. and Branson, R. Detecting drift in healthcare AI models based on data availability. *Joint European Conference on Machine Learning and Knowledge Discovery in Databases* 243-258 (2022) Springer Nature Switzerland. [doi: https://doi.org/10.1007/978-3-031-23633-4_17](https://link.springer.com/chapter/10.1007/978-3-031-23633-4_17)]  and (Davis, 2020)^[Davis, S. E., Greevy Jr, R. A., Lasko, T. A., Walsh, C. G. and Matheny, M. E. Detection of calibration drift in clinical prediction models to inform model updating. *Journal of biomedical informatics* (2020) [doi: https://doi.org/10.1016/j.jbi.2020.103611](https://www.sciencedirect.com/science/article/pii/S1532046420302392).].
 
-In some cases, refreshing a model to account for the change in the underlying data (both training and test) can be quick and easy. However, if concept drift is detected, then it may take more than just a model refresh as the relationships between the variable we are trying to model, and the explanatory data has changed. This may involve finding new data sources and could lead to significant changes in the model, for example moving from a regression model to a neural network. Deciding to rebuild or retrain a model can also in some cases have environmental impact (particularly for the more resource intense models such as deep learning and LLMs).  Either way, where models are subject to peer review or some form of governance this can be a more onerous task. 
+In some cases, refreshing a model to account for the change in the underlying data (both training and test) can be quick and easy. However, if concept drift is detected, then it may take more than just a model refresh as the relationships between the variable we are trying to model, and the explanatory data has changed. This may involve finding new data sources and could lead to significant changes in the model, for example moving from a regression model to a neural network. Deciding to rebuild or retrain a model can also in some cases have environmental impact (particularly for the more resource intensive models such as deep learning and LLMs).  Either way, where models are subject to peer review or some form of governance this can be a more onerous task. 
 
 Even with each step in a model’s evaluation stringently adhered to it is also important to assess the context for its deployment for risks and rogue scenarios that might break or in the case of Tay despoil it. And like all other stages of the evaluation this should not just be at the time of deployment but also over time. When models (machine learning or other) are used to inform or make important decisions providing information on how and when the model was evaluated, and how it is monitored should be standard practice not just to avoid the wasted expense of another broken AI model (algorithm) left on the shelf but more importantly to safeguard the welfare of those who come into contact with it. 
 
@@ -70,12 +73,10 @@ Even with each step in a model’s evaluation stringently adhered to it is also 
 ::: further-info
 ::: grid
 ::: {.g-col-12 .g-col-md-12}
-About the authors
-: **Author name** bio goes here.
+About the author
+: **Isabel Sassoon** is senior lecturer in the Department of Computer Science, Brunel University London.
 
-: **Author name** bio goes here.
 :::
-
 ::: {.g-col-12 .g-col-md-6}
 <!-- copyright goes to the author, or to Royal Statistical Society if written by staff -->
 Copyright and licence
@@ -87,7 +88,7 @@ Copyright and licence
 :::
 ::: {.g-col-12 .g-col-md-6}
 How to cite
-:   Name, Author. 2024. "Headline." Real World Data Science, May 6, 2024. [URL](https://realworlddatascience.net/ideas/posts/2024/05/06/ai-series-4.html)
+:   Sassoon, Isabel. 2024. "Evaluation essentials for safe and reliable AI model performance ." Real World Data Science, May 21, 2024. [URL](https://realworlddatascience.net/ideas/posts/2024/05/06/ai-series-4.html)
 :::
 :::
 :::
