--- a/ideas/posts/2024/04/29/gen-ai-human-intel.qmd
+++ b/ideas/posts/2024/04/29/gen-ai-human-intel.qmd
@@ -105,7 +105,7 @@ Copyright and licence
 :::
 ::: {.g-col-12 .g-col-md-6}
 How to cite
-: Miranda-Saavedra, Diego. 2024. "Generative AI models and the quest for human-level artificial intelligence." Real World Data Science, April 29, 2024. [URL](https://realworlddatascience.net/ideas/posts/2024/04/08/gen-ai-human-intel.html)
+: Miranda-Saavedra, Diego. 2024. "Generative AI models and the quest for human-level artificial intelligence." Real World Data Science, April 29, 2024. [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.11237253.svg)](https://doi.org/10.5281/zenodo.11237253)
 :::
 :::
 :::
